--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Deploy to server
       run: |
         sshpass -p ${{ secrets.SERVER_PASSWORD }} rsync -r . root@60.204.251.220:/tmp/html
-        sshpass -p ${{ secrets.SERVER_PASSWORD }} ssh root@60.204.251.220 "docker cp /tmp/html vueblig:/usr/share/nginx && docker restart blog"
+        sshpass -p ${{ secrets.SERVER_PASSWORD }} ssh root@60.204.251.220 "docker cp /tmp/html vueblig:/usr/share/nginx && docker restart vueblig"
