--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -13,6 +13,23 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: Install project dependencies
+      run: npm install
+
+    - name: Build project
+      run: npm run build
+
+    - name: Build Docker image
+      run: docker build -t vue-blog:latest .
+
+    - name: Save Docker image
+      run: docker save vue-blog:latest > image.tar
+
     - name: Install sshpass
       run: sudo apt-get install sshpass
 
@@ -24,7 +41,10 @@ jobs:
     - name: Add server to known hosts
       run: ssh-keyscan 60.204.251.220 >> ~/.ssh/known_hosts
 
-    - name: Deploy to server
+    - name: Transfer image to server
       run: |
-        sshpass -p ${{ secrets.SERVER_PASSWORD }} rsync -r . root@60.204.251.220:/tmp/html
-        sshpass -p ${{ secrets.SERVER_PASSWORD }} ssh root@60.204.251.220 "docker cp /tmp/html vueblig:/usr/share/nginx && docker restart vueblig"
+        sshpass -p ${{ secrets.SERVER_PASSWORD }} scp image.tar root@60.204.251.220:/tmp
+
+    - name: Load image and restart container on server
+      run: |
+        sshpass -p ${{ secrets.SERVER_PASSWORD }} ssh root@60.204.251.220 "docker load < /tmp/image.tar && docker stop vueblog && docker rm vueblog && docker run -d --name vueblog -p 80:80 vue-blog:latest"
